fixed bug with question-counter getting stuck before last question, translated all text to english

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ button.pressed {
     padding: 0;
     margin: 0;
     clear: both;
+    display: none;
 }
 input[type="checkbox"] + label {
     border: 1px solid black;
